AV-18: Align elements correctly for ckan pages with no sidebar, improve group items

--- a/modules/ytp-assets-common/src/less/ckan/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan/ckan.less
@@ -756,3 +756,7 @@ li.organization {
 .context-info .module-content {
   padding: 0;
 }
+
+#content > .wrapper > .primary:first-child > .module > .module-content {
+  padding-left: 0;
+}
